syntax = "proto3";

option go_package = "github.com/moznion/wiregarden/grpc/messages";

service Peers {
    rpc GetPeers (GetPeersRequest) returns (GetPeersResponse);
    rpc RegisterPeers (RegisterPeersRequest) returns (RegisterPeersResponse);
    rpc DeletePeers (DeletePeersRequest) returns (DeletePeersResponse);
}

message GetPeersRequest {
    string device_name = 1;
    repeated string filter_public_keys = 2;
}

message GetPeersResponse {
    repeated Peer peers = 1;
}

message RegisterPeersRequest {
    string device_name = 1;
    repeated Peer peers = 2;
}

message RegisterPeersResponse {
}

message DeletePeersRequest {
    repeated string public_keys = 1;
}

message DeletePeersResponse {
}

message Peer {
    string public_key = 1;
    repeated string allowed_ips = 2;
    string endpoint = 3;
}
